--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -2,8 +2,8 @@
 
 <ul>
     <% @tasks.each do |task| %>
-     <li><%= link_to task.id, task%> : <%= task.content %></li>
+     <li><%= link_to task.id, task%> :<%= task.content %> &gt; <%= task.status %></li>
     <% end %>
 </ul>
 
-<%= link_to 'タスクの投稿', new_task_path %>
+<%= link_to 'タスク・ステータスの投稿', new_task_path %>
