--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -11,7 +11,8 @@
       <ul class="navbar-nav">
         <li class="nav-item"><%= link_to  '新規タスクの投稿', new_task_path, class: 'nav-link' %></li>
         <li class="nav-item"><%= link_to 'Signup', signup_path, class: 'nav-link' %></li>
-        <li class="nav-item"><a href="#" class="nav-link">Login</a></li>
+        <li class="nav-item"><%= link_to 'Login', login_path, class: 'nav-link' %></li>
+        <li class="dropdown-item"><%= link_to 'Logout', logout_path, method: :delete %></li>
       </ul>
     </div>
   </nav>
