--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -16,4 +16,4 @@
 </table>
 
 <%= link_to '編集ページへ', edit_task_path(@task), class: 'btn btn-light'  %>
-<%= link_to 'このメッセージを削除する', @task, method: :delete, data: { confirm: '本当に削除してよろしいですか？', class: 'btn btn-danger' } %>
+<%= link_to 'このタスクを削除する', @task, method: :delete, data: { confirm: '本当に削除してよろしいですか？', class: 'btn btn-danger' } %>
